Fix dark mode, fix duplicate annotation id

--- a/src/assets/styles/_tokens.scss
+++ b/src/assets/styles/_tokens.scss
@@ -59,6 +59,9 @@
     --review-annotation-section-background-color: #222222;
     --review-annotation-selected-background-color: #444444;
     --review-annotation-selected-border-color: #999999;
+    --review-addition-color: #3b5b3b;
+    --review-addition-color-highlighted: #5b7400;
+    --review-highlight-2: #535171;
 
     .bw-icon {
       filter: invert(100%);
